# openjphjs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-native.sh  build.sh
.devcontainer/: Dockerfile
src/: CMakeLists.txt  EncodedBuffer.hpp  FrameInfo.hpp  HTJ2KDecoder.hpp  HTJ2KEncoder.hpp  OpenJPHDecoder.hpp  OpenJPHEncoder.hpp  Point.hpp  Size.hpp  jslib.cpp
test/browser/: index.html
test/cpp/: CMakeLists.txt  main.cpp
test/fixtures/j2c/: US1.j2c  VL1.j2c
test/node/: index.js  test.js
